Initial version of the stats database that contains statistical measurements of the data of all other databases's attributes and a new html page to display that information

--- a/Data.ipynb
+++ b/Data.ipynb
@@ -183,7 +183,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Databases: ['admin', 'config', 'local', 'skin_cancer_db', 'stomach_cancer_db', 'thyroid_cancer_db']\n",
+      "Databases: ['admin', 'config', 'local', 'skin_cancer_db', 'stats', 'stomach_cancer_db', 'thyroid_cancer_db']\n",
       "\n",
       "Skin Cancer:\n",
       "\tCollections: ['methylation', 'cna', 'rna']\n",
