--- a/Stats.ipynb
+++ b/Stats.ipynb
@@ -41,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a stats database with a collection named `records` that contains the number of documents for each database's collections."
+    "Create a stats database with a collection named `database` that contains the number of documents for each database's collections and how many attributes."
    ]
   },
   {
@@ -53,18 +53,20 @@
     "for database in mongo_client.list_database_names():\n",
     "    if database not in ('admin','config','local','stats'):\n",
     "        stats = { 'database': database }\n",
-    "        collection_records = {}\n",
+    "        collections_stats = {}\n",
     "        for collection in mongo_client[database].list_collection_names():\n",
-    "            collection_records[collection] = mongo_client[database][collection].count_documents({})\n",
-    "        stats['collections'] = collection_records\n",
-    "        mongo_client['stats']['records'].insert_one(stats)"
+    "            collections_stats[collection] = {}\n",
+    "            collections_stats[collection]['records'] = mongo_client[database][collection].count_documents({})\n",
+    "            collections_stats[collection]['attributes'] = len(list(mongo_client[database][collection].find_one({}).keys()))-1\n",
+    "        stats['collections'] = collections_stats\n",
+    "        mongo_client['stats']['database'].insert_one(stats)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the stats database create a new collection named `attributes` that contains all the attributes for each database's collections."
+    "In the stats database create a new collection named `collection` that contains all the attributes for each database's collections."
    ]
   },
   {
@@ -83,7 +85,104 @@
     "            attributes = mongo_client[database][collection].find_one({}).keys()\n",
     "            stats['attributes'] = list(attributes)\n",
     "            stats['attributes'].remove('_id')\n",
-    "            mongo_client['stats']['attributes'].insert_one(stats)"
+    "            mongo_client['stats']['collection'].insert_one(stats)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For each attribute in all database's collections calculate statistics measures."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Skin Cancer Database:\n",
+      "\tCNA values;\n",
+      "\tMethylation values;\n",
+      "\tRNA values.\n",
+      "Stomach Cancer Database:\n",
+      "\tCNA values;\n",
+      "\tMethylation values;\n",
+      "\tRNA values.\n",
+      "Thyroid Cancer Database:\n",
+      "\tCNA values;\n",
+      "\tMethylation values;\n",
+      "\tRNA values.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "\n",
+    "def get_all_values_from_csv(file):\n",
+    "    values = {}\n",
+    "\n",
+    "    with open(file) as csvfile:\n",
+    "        reader = csv.DictReader(csvfile)\n",
+    "        for row in reader:\n",
+    "            for attribute,value in row.items():\n",
+    "                if attribute != 'sampleId' and value != 'NA':\n",
+    "                    values.setdefault(attribute, []).append(value)\n",
+    "    return values\n",
+    "\n",
+    "def insert_values_on_mongo(database, collection, values):\n",
+    "    documents = []\n",
+    "    for a,v in values.items():\n",
+    "        document = {\n",
+    "            'database': database,\n",
+    "            'collection': collection,\n",
+    "            'attribute': a,\n",
+    "            'values': v\n",
+    "        }\n",
+    "        documents.append(document)\n",
+    "    mongo_client['stats']['statistics'].insert_many(documents)\n",
+    "    \n",
+    "# skin_cancer_db\n",
+    "print(\"Skin Cancer Database:\")\n",
+    "\n",
+    "cna_values = get_all_values_from_csv('data/skin/cna.csv')\n",
+    "methylation_values = get_all_values_from_csv('data/skin/methylation_hm450.csv')\n",
+    "rna_values = get_all_values_from_csv('data/skin/rnaZscore.csv')\n",
+    "insert_values_on_mongo('skin_cancer_db', 'cna', cna_values)\n",
+    "print(\"\\tCNA values;\")\n",
+    "insert_values_on_mongo('skin_cancer_db', 'methylation', methylation_values)\n",
+    "print(\"\\tMethylation values;\")\n",
+    "insert_values_on_mongo('skin_cancer_db', 'rna', rna_values)\n",
+    "print(\"\\tRNA values.\")\n",
+    "\n",
+    "# stomach_cancer_db\n",
+    "print(\"Stomach Cancer Database:\")\n",
+    "\n",
+    "cna_values = get_all_values_from_csv('data/stomach/cna.csv')\n",
+    "methylation_values = get_all_values_from_csv('data/stomach/methylation_hm450.csv')\n",
+    "rna_values = get_all_values_from_csv('data/stomach/rnaZscore.csv')\n",
+    "insert_values_on_mongo('stomach_cancer_db', 'cna', cna_values)\n",
+    "print(\"\\tCNA values;\")\n",
+    "insert_values_on_mongo('stomach_cancer_db', 'methylation', methylation_values)\n",
+    "print(\"\\tMethylation values;\")\n",
+    "insert_values_on_mongo('stomach_cancer_db', 'rna', rna_values)\n",
+    "print(\"\\tRNA values.\")\n",
+    "\n",
+    "# thyroid_cancer_db\n",
+    "print(\"Thyroid Cancer Database:\")\n",
+    "\n",
+    "cna_values = get_all_values_from_csv('data/thyroid/cna.csv')\n",
+    "methylation_values = get_all_values_from_csv('data/thyroid/methylation_hm450.csv')\n",
+    "rna_values = get_all_values_from_csv('data/thyroid/rnaZscore.csv')\n",
+    "insert_values_on_mongo('thyroid_cancer_db', 'cna', cna_values)\n",
+    "print(\"\\tCNA values;\")\n",
+    "insert_values_on_mongo('thyroid_cancer_db', 'methylation', methylation_values)\n",
+    "print(\"\\tMethylation values;\")\n",
+    "insert_values_on_mongo('thyroid_cancer_db', 'rna', rna_values)\n",
+    "print(\"\\tRNA values.\")"
    ]
   }
  ],
