Stats file now calculates new metrics that are displayed in the attributes page

--- a/Stats.ipynb
+++ b/Stats.ipynb
@@ -98,29 +98,35 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Skin Cancer Database:\n",
-      "\tCNA values;\n",
-      "\tMethylation values;\n",
-      "\tRNA values.\n",
+      "\tCNA values ...\n",
+      "\tCNA values (OK);\n",
+      "\tMethylation values ...\n",
+      "\tMethylation values (OK);\n",
+      "\tRNA values ...\n",
+      "\tRNA values (OK).\n",
       "Stomach Cancer Database:\n",
-      "\tCNA values;\n",
-      "\tMethylation values;\n",
-      "\tRNA values.\n",
+      "\tCNA values (OK);\n",
+      "\tMethylation values (OK);\n",
+      "\tRNA values (OK).\n",
       "Thyroid Cancer Database:\n",
-      "\tCNA values;\n",
-      "\tMethylation values;\n",
-      "\tRNA values.\n"
+      "\tCNA values (OK);\n",
+      "\tMethylation values (OK);\n",
+      "\tRNA values (OK).\n"
      ]
     }
    ],
    "source": [
     "import csv\n",
+    "import numpy as np\n",
     "\n",
     "def get_all_values_from_csv(file):\n",
     "    values = {}\n",
@@ -130,7 +136,7 @@
     "        for row in reader:\n",
     "            for attribute,value in row.items():\n",
     "                if attribute != 'sampleId' and value != 'NA':\n",
-    "                    values.setdefault(attribute, []).append(value)\n",
+    "                    values.setdefault(attribute, []).append(float(value))\n",
     "    return values\n",
     "\n",
     "def insert_values_on_mongo(database, collection, values):\n",
@@ -140,7 +146,11 @@
     "            'database': database,\n",
     "            'collection': collection,\n",
     "            'attribute': a,\n",
-    "            'values': v\n",
+    "            'values': v,\n",
+    "            'max_value': np.amax(v),\n",
+    "            'min_value': np.amin(v),\n",
+    "            'mean_value': np.mean(v),\n",
+    "            'median_value': np.median(v)\n",
     "        }\n",
     "        documents.append(document)\n",
     "    mongo_client['stats']['statistics'].insert_many(documents)\n",
@@ -148,42 +158,64 @@
     "# skin_cancer_db\n",
     "print(\"Skin Cancer Database:\")\n",
     "\n",
+    "print(\"\\tCNA values ...\", end=\"\\r\")\n",
     "cna_values = get_all_values_from_csv('data/skin/cna.csv')\n",
-    "methylation_values = get_all_values_from_csv('data/skin/methylation_hm450.csv')\n",
-    "rna_values = get_all_values_from_csv('data/skin/rnaZscore.csv')\n",
     "insert_values_on_mongo('skin_cancer_db', 'cna', cna_values)\n",
-    "print(\"\\tCNA values;\")\n",
+    "print(\"\\tCNA values (OK);\")\n",
+    "\n",
+    "print(\"\\tMethylation values ...\", end=\"\\r\")\n",
+    "methylation_values = get_all_values_from_csv('data/skin/methylation_hm450.csv')\n",
     "insert_values_on_mongo('skin_cancer_db', 'methylation', methylation_values)\n",
-    "print(\"\\tMethylation values;\")\n",
+    "print(\"\\tMethylation values (OK);\")\n",
+    "\n",
+    "print(\"\\tRNA values ...\", end=\"\\r\")\n",
+    "rna_values = get_all_values_from_csv('data/skin/rnaZscore.csv')\n",
     "insert_values_on_mongo('skin_cancer_db', 'rna', rna_values)\n",
-    "print(\"\\tRNA values.\")\n",
+    "print(\"\\tRNA values (OK).\")\n",
     "\n",
     "# stomach_cancer_db\n",
     "print(\"Stomach Cancer Database:\")\n",
     "\n",
+    "print(\"\\tCNA values ...\", end=\"\\r\")\n",
     "cna_values = get_all_values_from_csv('data/stomach/cna.csv')\n",
-    "methylation_values = get_all_values_from_csv('data/stomach/methylation_hm450.csv')\n",
-    "rna_values = get_all_values_from_csv('data/stomach/rnaZscore.csv')\n",
     "insert_values_on_mongo('stomach_cancer_db', 'cna', cna_values)\n",
-    "print(\"\\tCNA values;\")\n",
+    "print(\"\\tCNA values (OK);\")\n",
+    "\n",
+    "print(\"\\tMethylation values ...\", end=\"\\r\")\n",
+    "methylation_values = get_all_values_from_csv('data/stomach/methylation_hm450.csv')\n",
     "insert_values_on_mongo('stomach_cancer_db', 'methylation', methylation_values)\n",
-    "print(\"\\tMethylation values;\")\n",
+    "print(\"\\tMethylation values (OK);\")\n",
+    "\n",
+    "print(\"\\tRNA values ...\", end=\"\\r\")\n",
+    "rna_values = get_all_values_from_csv('data/stomach/rnaZscore.csv')\n",
     "insert_values_on_mongo('stomach_cancer_db', 'rna', rna_values)\n",
-    "print(\"\\tRNA values.\")\n",
+    "print(\"\\tRNA values (OK).\")\n",
     "\n",
     "# thyroid_cancer_db\n",
     "print(\"Thyroid Cancer Database:\")\n",
     "\n",
+    "print(\"\\tCNA values ...\", end=\"\\r\")\n",
     "cna_values = get_all_values_from_csv('data/thyroid/cna.csv')\n",
-    "methylation_values = get_all_values_from_csv('data/thyroid/methylation_hm450.csv')\n",
-    "rna_values = get_all_values_from_csv('data/thyroid/rnaZscore.csv')\n",
     "insert_values_on_mongo('thyroid_cancer_db', 'cna', cna_values)\n",
-    "print(\"\\tCNA values;\")\n",
+    "print(\"\\tCNA values (OK);\")\n",
+    "\n",
+    "print(\"\\tMethylation values ...\", end=\"\\r\")\n",
+    "methylation_values = get_all_values_from_csv('data/thyroid/methylation_hm450.csv')\n",
     "insert_values_on_mongo('thyroid_cancer_db', 'methylation', methylation_values)\n",
-    "print(\"\\tMethylation values;\")\n",
+    "print(\"\\tMethylation values (OK);\")\n",
+    "\n",
+    "print(\"\\tRNA values ...\", end=\"\\r\")\n",
+    "rna_values = get_all_values_from_csv('data/thyroid/rnaZscore.csv')\n",
     "insert_values_on_mongo('thyroid_cancer_db', 'rna', rna_values)\n",
-    "print(\"\\tRNA values.\")"
+    "print(\"\\tRNA values (OK).\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
