New names for the collections, instead of the acronyms

--- a/Data.ipynb
+++ b/Data.ipynb
@@ -54,7 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Each database has 3 collections: **RNA**, **CNA** and **Methylation**.\n",
+    "Each database has 3 collections: **Gene expression**, **Copy number analysis** and **Human Methylation**.\n",
     "\n",
     "Each collection has its attributes in a header file located in the `data` folder"
    ]
@@ -75,7 +75,7 @@
     }
    ],
    "source": [
-    "COLLECTIONS_NAMES = [\"cna\", \"methylation\", \"rna\"]\n",
+    "COLLECTIONS_NAMES = [\"Copy Number Analysis\", \"Human Methylation\", \"Gene Expression\"]\n",
     "CNA = 0\n",
     "METHYLATION = 1\n",
     "RNA = 2\n",
@@ -128,11 +128,10 @@
     "COLLECTIONS_CSV = [\"cna.csv\", \"methylation_hm450.csv\", \"rnaZscore.csv\"]\n",
     "\n",
     "# Inserts a document in the database and collection provided\n",
-    "\n",
     "def insert_document(database, collection, document):\n",
     "    database[collection].insert_one(document)\n",
     "\n",
-    "# Runs through the \n",
+    "# Runs through the csvs to populate the database\n",
     "def populate_database(csvs_folder, database):\n",
     "    cna_csv = csv.DictReader(open(csvs_folder + COLLECTIONS_CSV[CNA]))\n",
     "    methylation_csv = csv.DictReader(open(csvs_folder + COLLECTIONS_CSV[METHYLATION]))\n",
@@ -186,21 +185,21 @@
       "Databases: ['admin', 'config', 'local', 'skin_cancer_db', 'stats', 'stomach_cancer_db', 'thyroid_cancer_db']\n",
       "\n",
       "Skin Cancer:\n",
-      "\tCollections: ['methylation', 'cna', 'rna']\n",
+      "\tCollections: ['Gene Expression', 'Copy Number Analysis', 'Human Methylation']\n",
       "\n",
       "\tCNA records: 367\n",
       "\tMethylation records: 473\n",
       "\tRNA records: 472\n",
       "\n",
       "Stomach Cancer:\n",
-      "\tCollections: ['rna', 'methylation', 'cna']\n",
+      "\tCollections: ['Human Methylation', 'Gene Expression', 'Copy Number Analysis']\n",
       "\n",
       "\tCNA records: 441\n",
       "\tMethylation records: 397\n",
       "\tRNA records: 415\n",
       "\n",
       "Thyroid Cancer:\n",
-      "\tCollections: ['methylation', 'cna', 'rna']\n",
+      "\tCollections: ['Copy Number Analysis', 'Gene Expression', 'Human Methylation']\n",
       "\n",
       "\tCNA records: 499\n",
       "\tMethylation records: 567\n",
@@ -226,6 +225,13 @@
     "print(\"\\nThyroid Cancer:\")\n",
     "print_database_stats(thyroid_cancer_db)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
