--- a/Stats.ipynb
+++ b/Stats.ipynb
@@ -107,11 +107,8 @@
      "output_type": "stream",
      "text": [
       "Skin Cancer Database:\n",
-      "\tCNA values ...\n",
       "\tCNA values (OK);\n",
-      "\tMethylation values ...\n",
       "\tMethylation values (OK);\n",
-      "\tRNA values ...\n",
       "\tRNA values (OK).\n",
       "Stomach Cancer Database:\n",
       "\tCNA values (OK);\n",
@@ -160,17 +157,17 @@
     "\n",
     "print(\"\\tCNA values ...\", end=\"\\r\")\n",
     "cna_values = get_all_values_from_csv('data/skin/cna.csv')\n",
-    "insert_values_on_mongo('skin_cancer_db', 'cna', cna_values)\n",
+    "insert_values_on_mongo('skin_cancer_db', 'Copy Number Analysis', cna_values)\n",
     "print(\"\\tCNA values (OK);\")\n",
     "\n",
     "print(\"\\tMethylation values ...\", end=\"\\r\")\n",
     "methylation_values = get_all_values_from_csv('data/skin/methylation_hm450.csv')\n",
-    "insert_values_on_mongo('skin_cancer_db', 'methylation', methylation_values)\n",
+    "insert_values_on_mongo('skin_cancer_db', 'Human Methylation', methylation_values)\n",
     "print(\"\\tMethylation values (OK);\")\n",
     "\n",
     "print(\"\\tRNA values ...\", end=\"\\r\")\n",
     "rna_values = get_all_values_from_csv('data/skin/rnaZscore.csv')\n",
-    "insert_values_on_mongo('skin_cancer_db', 'rna', rna_values)\n",
+    "insert_values_on_mongo('skin_cancer_db', 'Gene Expression', rna_values)\n",
     "print(\"\\tRNA values (OK).\")\n",
     "\n",
     "# stomach_cancer_db\n",
@@ -178,17 +175,17 @@
     "\n",
     "print(\"\\tCNA values ...\", end=\"\\r\")\n",
     "cna_values = get_all_values_from_csv('data/stomach/cna.csv')\n",
-    "insert_values_on_mongo('stomach_cancer_db', 'cna', cna_values)\n",
+    "insert_values_on_mongo('stomach_cancer_db', 'Copy Number Analysis', cna_values)\n",
     "print(\"\\tCNA values (OK);\")\n",
     "\n",
     "print(\"\\tMethylation values ...\", end=\"\\r\")\n",
     "methylation_values = get_all_values_from_csv('data/stomach/methylation_hm450.csv')\n",
-    "insert_values_on_mongo('stomach_cancer_db', 'methylation', methylation_values)\n",
+    "insert_values_on_mongo('stomach_cancer_db', 'Human Methylation', methylation_values)\n",
     "print(\"\\tMethylation values (OK);\")\n",
     "\n",
     "print(\"\\tRNA values ...\", end=\"\\r\")\n",
     "rna_values = get_all_values_from_csv('data/stomach/rnaZscore.csv')\n",
-    "insert_values_on_mongo('stomach_cancer_db', 'rna', rna_values)\n",
+    "insert_values_on_mongo('stomach_cancer_db', 'Gene Expression', rna_values)\n",
     "print(\"\\tRNA values (OK).\")\n",
     "\n",
     "# thyroid_cancer_db\n",
@@ -196,26 +193,19 @@
     "\n",
     "print(\"\\tCNA values ...\", end=\"\\r\")\n",
     "cna_values = get_all_values_from_csv('data/thyroid/cna.csv')\n",
-    "insert_values_on_mongo('thyroid_cancer_db', 'cna', cna_values)\n",
+    "insert_values_on_mongo('thyroid_cancer_db', 'Copy Number Analysis', cna_values)\n",
     "print(\"\\tCNA values (OK);\")\n",
     "\n",
     "print(\"\\tMethylation values ...\", end=\"\\r\")\n",
     "methylation_values = get_all_values_from_csv('data/thyroid/methylation_hm450.csv')\n",
-    "insert_values_on_mongo('thyroid_cancer_db', 'methylation', methylation_values)\n",
+    "insert_values_on_mongo('thyroid_cancer_db', 'Human Methylation', methylation_values)\n",
     "print(\"\\tMethylation values (OK);\")\n",
     "\n",
     "print(\"\\tRNA values ...\", end=\"\\r\")\n",
     "rna_values = get_all_values_from_csv('data/thyroid/rnaZscore.csv')\n",
-    "insert_values_on_mongo('thyroid_cancer_db', 'rna', rna_values)\n",
+    "insert_values_on_mongo('thyroid_cancer_db', 'Gene Expression', rna_values)\n",
     "print(\"\\tRNA values (OK).\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
